Added character CRUD endpoints
